# ALLFED-RAS-Fertilizer

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  testing.yml
data/: README.md
docs/: README.md  methodology.md
results/: README.md
scripts/: README.md  all_nutrients.ipynb  real_data_nitrogen.ipynb  toy_example.ipynb
scripts/validation/: README.md  fertilizer_validation_2009_crisis.ipynb  fertilizer_validation_russia_ukraine.ipynb
src/: README.md  __init__.py  model.py  postprocessing.py  preprocessing.py  utils.py
tests/: README.md  test_ras.py
